packages/nemo-parser/tests/type_errors/unknown_struct.nemo
fn main() = {
  let x = Unknown {}
}